# graduate-entrance

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  compose.yaml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: README  env.py
backend/migrations/versions/: 202607150501_create_syllabus_tables.py  202607150702_create_planning_config_tables.py  202607160120_create_problem_tables.py  202607160730_create_review_logs.py  202607160830_create_ai_week_plans.py  202607161030_create_essay_materials.py  202607161200_add_ai_grading_columns.py  202607161400_create_subject_goals.py  202607161500_create_retro_messages.py  202607170001_create_kp_mastery.py  202607170300_create_vocab_words.py  202607170400_create_papers.py  202607170700_create_recitation_items.py  202607171100_create_chat_tables.py  202607171400_add_vocab_word_details.py  202607171500_expand_recitation_subjects.py  (+13 more)
backend/scripts/: parse_papers.py  polish_papers.py
backend/tests/: test_automation_jobs.py  test_chat_api.py  test_chat_summarize.py  test_chat_topics.py  test_essay_api.py  test_health.py  test_learning_snapshot.py  test_mastery_api.py  test_mastery_writeback.py  test_papers_api.py  test_planning_api.py  test_problems_ai.py  test_problems_api.py  test_profile_api.py  test_recitation_api.py  test_retro_api.py  test_retro_gaps.py  test_sandbox.py  test_scheduling_api.py  test_syllabus_api.py  test_syllabus_importer.py  test_today_priority.py  test_vocab_api.py  test_vocab_bulk_enrich.py
web/: Caddyfile  (+9 more)
(+220 files in other folders)
